--- a/src/app/comp3/comp3.component.html
+++ b/src/app/comp3/comp3.component.html
@@ -18,3 +18,16 @@
 <p *ngIf="ngIfcondition then p8">Условие p8</p>
 <ng-template #p8 ><p>Параграф 8</p></ng-template>
 <button (click)="toggleCondition()">toggle p8</button>
+
+<hr/>
+<h2>Использование ngFor</h2>
+<ul>
+    <ng-template ngFor let-item [ngForOf]="items">
+        <li>{{item}}</li>
+    </ng-template>
+</ul>
+<hr/>
+<ul>
+    <li *ngFor="let item of (items); let i = index">{{ i+1 }}.{{item}}</li>
+</ul>
+
